@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2004-2007 by Konstantin V. Arkhipov, Anton E. Lebedevich *
+ *   Copyright (C) 2004-2008 by Konstantin V. Arkhipov, Anton E. Lebedevich *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
  *   it under the terms of the GNU Lesser General Public License as         *
@@ -20,6 +20,9 @@
 		
 		const SIGNED_MIN = -2147483648;
 		const SIGNED_MAX = +2147483647;
+		
+		const SIGNED_BIG_MIN = -9223372036854775808;
+		const SIGNED_BIG_MAX = 9223372036854775807;
 		
 		const UNSIGNED_SMALL_MAX = 65535;
 		const UNSIGNED_MAX = 4294967295;
