@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2007 by Konstantin V. Arkhipov                          *
+ *   Copyright (C) 2007-2008 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -15,6 +15,11 @@
 	**/
 	final class UnsignedSmallIntegerType extends SmallIntegerType
 	{
+		public function getSize()
+		{
+			return 2 & LightMetaProperty::UNSIGNED_FLAG;
+		}
+		
 		public function toColumnType()
 		{
 			return
